--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "sass": "^1.35.2",
+    "sass-loader": "^12.1.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
