--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
+    "mongodb": "^4.1.0",
     "uuid": "3.3.3"
   },
   "devDependencies": {
