--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "react-ecosystems-server",
+  "name": "node-express-mongodb",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Node.js Restful CRUD API with Node.js, Express and MongoDB",
+  "main": "server.js",
   "scripts": {
-    "start": "npx babel-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "nodejs",
+    "express",
+    "rest",
+    "api",
+    "mongodb"
+  ],
+  "author": "elliott",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "1.19.0",
-    "cors": "2.8.5",
-    "express": "4.17.1",
-    "mongodb": "^4.1.0",
-    "uuid": "3.3.3"
-  },
-  "devDependencies": {
-    "@babel/core": "7.7.5",
-    "@babel/node": "7.7.4",
-    "@babel/preset-env": "7.7.6"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.5"
   }
 }
