--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js Restful CRUD API with Node.js, Express and MongoDB",
   "main": "server.js",
   "scripts": {
+    "start": "npx babel-node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,6 +19,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "@babel/core": "7.7.5",
+    "@babel/node": "7.7.4",
+    "@babel/preset-env": "7.7.6"
   }
 }
