--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.14.6",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -10,6 +11,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "grommet": "^2.18.0",
+    "grommet-icons": "^4.5.0",
+    "grommet-styles": "^0.2.0",
+    "grommet-theme-hpe": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
@@ -24,7 +29,18 @@
     "reselect": "^4.0.0",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.4.2",
+    "web-vitals": "^1.0.1",
+    "@nivo/bullet": "^0.73.0",
+    "@nivo/core": "^0.73.0",
+    "@nivo/pie": "^0.73.0",
+    "http-status-codes": "^2.1.4",
+    "react-focus-lock": "^2.4.0",
+    "react-i18next": "^11.12.0",
+    "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
+    "react-table": "^7.6.3",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -32,14 +48,49 @@
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
-    "css-loader": "^3.4.2",
+    "@types/d3": "^6.7.3",
+    "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/node": "^16.10.1",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-slick": "^0.23.5",
+    "@types/react-table": "^7.0.29",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-mock-store": "^1.0.2",
+    "@types/styled-components": "^5.1.7",
+    "@types/webpack": "^4.41.26",
+    "@types/webpack-dev-server": "^3.11.1",
+    "@types/redux": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "styled-components": "^5.2.1",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testcafe": "^0.2.1",
+    "eslint-plugin-unused-imports": "^1.1.1",
+    "css-loader": "^3.6.0",
+    "mini-css-extract-plugin": "^2.2.0",
     "react-hot-loader": "^4.13.0",
-    "style-loader": "^1.1.3"
+    "style-loader": "^1.1.3",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.20",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "lint": "eslint \"src/**/*.{js,ts,tsx}\" --quiet --fix",
+    "test": "jest --collectCoverage --config ./jest.config.ts",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -58,6 +109,17 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "npm run lint",
+      "npm run test -- --bail"
     ]
   }
 }
