--- a/package.json
+++ b/package.json
@@ -8,39 +8,35 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@nivo/bullet": "^0.73.0",
+    "@nivo/core": "^0.73.0",
+    "@nivo/pie": "^0.73.0",
     "grommet": "^2.18.0",
     "grommet-icons": "^4.5.0",
     "grommet-styles": "^0.2.0",
     "grommet-theme-hpe": "^2.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "http-status-codes": "^2.1.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-focus-lock": "^2.4.0",
+    "react-i18next": "^11.12.0",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
+    "react-table": "^7.6.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
-    "typescript": "^4.4.2",
-    "web-vitals": "^1.0.1",
-    "@nivo/bullet": "^0.73.0",
-    "@nivo/core": "^0.73.0",
-    "@nivo/pie": "^0.73.0",
-    "http-status-codes": "^2.1.4",
-    "react-focus-lock": "^2.4.0",
-    "react-i18next": "^11.12.0",
-    "react-slick": "^0.28.1",
-    "react-spinners": "^0.11.0",
-    "react-table": "^7.6.3",
-    "redux-saga": "^1.1.3"
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -48,8 +44,12 @@
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.1.10",
     "@types/d3": "^6.7.3",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/jest": "^26.0.20",
     "@types/node": "^16.10.1",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
@@ -57,15 +57,15 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-slick": "^0.23.5",
     "@types/react-table": "^7.0.29",
+    "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.8",
     "@types/redux-mock-store": "^1.0.2",
     "@types/styled-components": "^5.1.7",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.1",
-    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
-    "styled-components": "^5.2.1",
+    "css-loader": "^3.6.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -73,21 +73,21 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testcafe": "^0.2.1",
     "eslint-plugin-unused-imports": "^1.1.1",
-    "css-loader": "^3.6.0",
-    "mini-css-extract-plugin": "^2.2.0",
-    "react-hot-loader": "^4.13.0",
-    "style-loader": "^1.1.3",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@types/jest": "^26.0.20",
     "lint-staged": "^10.5.4",
+    "mini-css-extract-plugin": "^2.2.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
+    "react-hot-loader": "^4.13.0",
     "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "style-loader": "^1.1.3",
+    "styled-components": "^5.2.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.4.2",
+    "webpack": "4.44.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "lint": "eslint \"src/**/*.{js,ts,tsx}\" --quiet --fix",
     "test": "jest --collectCoverage --config ./jest.config.ts",
