--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@nivo/bullet": "^0.73.0",
     "@nivo/core": "^0.73.0",
     "@nivo/pie": "^0.73.0",
-    "grommet": "^2.18.0",
+    "grommet": "^2.26.0",
     "grommet-icons": "^4.5.0",
     "grommet-styles": "^0.2.0",
     "grommet-theme-hpe": "^2.0.2",
@@ -34,9 +34,8 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "sass": "^1.35.2",
-    "sass-loader": "^12.1.0",
-    "web-vitals": "^1.0.1"
+    "sass": "^1.59.3",
+    "sass-loader": "^13.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -74,7 +73,6 @@
     "eslint-plugin-testcafe": "^0.2.1",
     "eslint-plugin-unused-imports": "^1.1.1",
     "lint-staged": "^10.5.4",
-    "mini-css-extract-plugin": "^2.2.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "react-hot-loader": "^4.13.0",
